fix(ui): improve alignment of clear and dropdown indicator buttons in select based fields

--- a/packages/ui/src/elements/ReactSelect/ClearIndicator/index.scss
+++ b/packages/ui/src/elements/ReactSelect/ClearIndicator/index.scss
@@ -3,7 +3,7 @@
 @layer payload-default {
   .clear-indicator {
     cursor: pointer;
-    display: flex;
+    // display: flex;
 
     &:focus-visible {
       outline: var(--accessibility-outline);
